width on narrow screen fixed

--- a/style/lightbox.scss
+++ b/style/lightbox.scss
@@ -14,10 +14,10 @@
 	img {
 		//display: none;
 		position: absolute;
-		//max-width: 100%;
+		max-width: 90vw;
 		//width: 100%;
-		height: 100%;
-		//object-fit: scale-down;
+		height: fit-content;
+		object-fit: scale-down;
 		//max-height: 60vh;
 		opacity: 0;
 		transition: 0.2s;
